# grabcut_impl_cpp_oc411

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  ForegroundExtractor.hpp  README.md  main.cpp  vcpkg.json
.github/workflows/: build.yml
Luxoria.Algorithm.GrabCut/: Luxoria.Algorithm.GrabCut.sln
Luxoria.Algorithm.GrabCut/GrabCut.TestMain/: GrabCut.TestMain.csproj  Program.cs
Luxoria.Algorithm.GrabCut/Luxoria.Algorithm.GrabCut/: GrabCut.cs  Luxoria.Algorithm.GrabCut.csproj
Luxoria.Algorithm.GrabCut/Luxoria.Algorithm.GrabCut/NativeLibraries/arm64/: extract_fg.exp  extract_fg.lib
Luxoria.Algorithm.GrabCut/Luxoria.Algorithm.GrabCut/NativeLibraries/x64/: extract_fg.exp  extract_fg.lib
Luxoria.Algorithm.GrabCut/Luxoria.Algorithm.GrabCut/NativeLibraries/x86/: extract_fg.exp  extract_fg.lib
libgrabcut/: api.cpp  api.h
